# Anvil

./: .gitignore  CMakeLists.txt  README.md  build-package.sh  test_updater.sh
.github/workflows/: ci.yml  release.yml
debian/: changelog  control  install  rules
example/: build.conf  multi-target.conf
example/include/: calculator.h
example/src/: calculator.c  client.c  common.c  main.c  network.c  server.c  ui.c
include/: anvil.h  colors.h  version.h
src/: config_parser.c  file_utils.c  main.c  makefile_generator.c  string_utils.c  template_generator.c  updater.c  watch_system.c
test/: test_updater.c  test_updater_offline.c
